@@ -1,23 +1,0 @@
-Thanks to the efforts of Paul Jenner (psj@mustec.eu.org), GFingerPoken now
-has a proper build procedure.  The old build procedure (which was a simple
-Makefile that utilized gtk-config) is now present in Makefile.old.
-
-Requirements: GTK+ 1.2 or higher.  I have only built this under Red Hat so
-it may not work on other systems.  However an older version functioned on
-my cruddy Sun IPX so perhaps it will.  GTK+ has its own requirements as
-well, obviously (namely X11).  If you can compile this under Win32 tell
-me, as I've tried and failed miserably.
-
-To build and install:
-
-1) Type "./configure"
-2) Type "make" - You may need GNU make.
-The binary should compile without warnings.  (Not that this means that my
-code is any good.)
-3) As root, run "make install" or alternatively, copy the binary "gfpoken"
-to the place you want it to go.
-4) That's it.  (All graphics, etc. are internal to the program so you
-don't need to worry about your path or anything.)  Just type "gfpoken" to
-start 'er up.  If you want to dock GFP with Window Maker, you should
-probably "cp iconpix.h /usr/share/pixmaps/gfpoken.xpm" and then use its
-icon for the dock icon. (The .h file is in actuality an xpm.)
