@@ -9,3 +9,5 @@ The first option was chosen, hence the package is in the main section.
 
 However, I am not a very good artist, so the new artwork could be improved.
 If you want to do this, please contact me.
+
+Bas Wijnen <shevek@fmf.nl>
